# Aranya_Prime

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  numerical_audit.py  prime_math.mod  pyproject.toml  pyrightconfig.json  setup.py  stress_prime.py  task.md  ultimate_falsification.py
.benchmarks/Linux-CPython-3.12-64bit/: 0001_results.json
.github/workflows/: build_wheels.yml
aranya_prime/: __init__.py  core.py  version.py  wrapper.py
python/aranya_prime/: __init__.py  _aranya_prime.pyi
scripts/: build.py
src/: array_ops.cpp  lib.rs  linear_alg.cpp  math.f90  poly.cpp  transform.cpp  trig.cpp  utils.v
src/linalg/: blas_ops.rs  linear_alg.rs  matmul.rs  mod.rs
src/math/: array_ops.rs  convolve.rs  dct_wavelet.rs  f32_ops.rs  fft.rs  mod.rs  poly.rs  stats.rs  streaming.rs  trig.rs
src/transform/: mod.rs
tests/: test_benchmarks.py  test_correctness.py  test_f32.py  test_performance.py  test_streaming.py
