[package]
name = "aranya-prime"
version = "0.1.0"
edition = "2021"
description = "High-performance computation engine for Python, powered by Rust & Rayon."
authors = ["Aditya <aranya_research>"]
license = "MIT"
repository = "https://github.com/Adi-Baba/Aranya_Prime"

# We compile this as a dynamic C-library so Python can load it
[lib]
name = "aranya_prime"
crate-type = ["cdylib"]

[dependencies]
# Required for Python C-API bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# Zero-copy numpy wrappers
numpy = "0.28"

# Multi-threading (replacing OpenMP from the C++ version)
rayon = "1.8"
rustfft = "6.4.1"
blas-src = { version = "0.14.0", features = ["openblas", "openblas-src"] }
lapack-src = { version = "0.13.0", features = ["openblas"] }
ndarray = { version = "0.17.2", features = ["blas"] }
ndarray-linalg = { version = "0.18.1", features = ["openblas-system"] }

[profile.release]
# Tell cargo to prioritize raw speed: max optimizations, LTO, and abort on panic.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
