[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aranya-prime"
version = "0.1.0a1"
description = "High-Performance OIH Computational Engine with native C++/Fortran kernels"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aditya", email = "adityatheh@gmail.com"}
]
keywords = ["high-performance", "computing", "numpy", "optimization", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Adi-Baba/Aranya_Prime"
Repository = "https://github.com/Adi-Baba/Aranya_Prime.git"
Issues = "https://github.com/Adi-Baba/Aranya_Prime/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aranya_prime*"]

# --- CIBUILDWHEEL CONFIGURATION ---
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"
test-command = "python -c 'import aranya_prime; print(aranya_prime.__file__)'"

# 1. LINUX Config (runs in manylinux container)
[tool.cibuildwheel.linux]
# Install gfortran (CentOS/RHEL based)
before-all = "yum install -y gcc-gfortran"
environment = { CC="gcc", CXX="g++", FC="gfortran" }

# 2. WINDOWS Config (runs on host)
[tool.cibuildwheel.windows]
# Install MinGW logic or rely on pre-installed. 
# GitHub Windows runner usually has Chocolatey.
before-all = "choco install mingw --force"
environment = { PATH="C:\\ProgramData\\chocolatey\\bin;$PATH", CC="g++", CXX="g++", FC="gfortran" }

# 3. MACOS Config (runs on host)
[tool.cibuildwheel.macos]
# Use default compiler (clang) which handles cross-compilation for arm64/x86_64 correctly.
# We trust it to compile standard C/C++ code.
# OpenMP is optional in our build script now.

[tool.setuptools.package-data]
aranya_prime = ["*.dll", "*.so", "*.dylib"]
