[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aranya-prime"
version = "0.1.0"
description = "High-performance computation engine built with Rust and PyO3."
readme = "README.md"
authors = [
    { name = "Aditya", email = "adityapanda9876ak@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
]

[tool.maturin]
# This tells Maturin to use PyO3 and where to put the compiled .so/.pyd file
features = ["pyo3/extension-module"]
module-name = "aranya_prime._aranya_prime"
# We define `aranya_prime` as a Python package directory so we can add pure Python wrappers
python-source = "python"
