[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aranya-prime"
version = "0.1.0"
description = "High-performance computation engine built with Rust and PyO3."
readme = "README.md"
authors = [
    { name = "Aditya", email = "adityapanda9876ak@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-benchmark",
]

[tool.maturin]
# Use PyO3 extension module for CPython bindings
features = ["pyo3/extension-module"]
# The Rust module is named 'aranya_prime' (from Cargo.toml lib.name)
# Python source files (like __init__.py) are in the 'python' directory
python-source = "python"
# The module name that Python will import
module-name = "aranya_prime._aranya_prime"
